--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,15 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
+# Fabric Properties from the Fabric insaller
+minecraft_version=1.19.3
+yarn_mappings=1.19.3+build.2
+loader_version=0.14.11
 
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.9
-loader_version=0.11.3
-
+#Fabric api
+fabric_version=0.68.1+1.19.3
 
 # Mod Properties
-mod_version = 1.0
+mod_version = 1.1
 maven_group = me.cominixo
-archives_base_name = signcopy
-
+archives_base_name = sign_copy
